<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_fragment_IV"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:adjustViewBounds="true"
        android:padding="8dp"
        android:src="@drawable/ic_clear_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_sort_by"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/rating"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <RadioButton
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_by"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_order_by"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:checkedButton="@+id/ascending"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ascending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increasing"
                android:layout_marginBottom="12dp"/>

            <RadioButton
                android:id="@+id/descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decreasing" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Apply"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/apply_button"/>

</LinearLayout>